force-app/main/default/objects/Transfer__c/fields/Callback_Confirmation_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Callback_Confirmation_Prompt__c</fullName>
    <description>Prompt to play when you want the user to confirm the callback number.</description>
    <inlineHelpText>Prompt to play when you want the user to confirm the callback number.</inlineHelpText>
    <label>Callback Confirmation Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>