force-app/main/default/objects/Transfer__c/fields/Callback_End_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Callback_End_Prompt__c</fullName>
    <description>Prompt to play when ending the callback flow.</description>
    <inlineHelpText>Prompt to play when ending the callback flow.</inlineHelpText>
    <label>Callback End Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>