force-app/main/default/objects/Transfer__c/fields/Callback_Menu_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Callback_Menu_Prompt__c</fullName>
    <description>Prompt to play while presenting menu options to the user.</description>
    <inlineHelpText>Prompt to play while presenting menu options to the user.</inlineHelpText>
    <label>Callback Menu Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>