force-app/main/default/objects/Transfer__c/fields/Callback_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Callback_Prompt__c</fullName>
    <description>Message to present to the customer before offering the callback.</description>
    <inlineHelpText>Message to present to the customer before offering the callback.</inlineHelpText>
    <label>Callback Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>