force-app/main/default/objects/Transfer__c/fields/Callback_Threshold_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Callback_Threshold_In_Minutes__c</fullName>
    <description>Minutes (post start of the Business Day OR before end of the Business Day) that will be considered as off-hours</description>
    <inlineHelpText>Minutes (post start of the Business Day OR before end of the Business Day) that will be considered as off-hours</inlineHelpText>
    <label>Callback Threshold (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>