force-app/main/default/objects/Transfer__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>The channel through which the work-item is received</description>
    <inlineHelpText>The channel through which the work-item is received</inlineHelpText>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LiveChatTranscript</fullName>
                <label>Chat</label>
            </value>
            <value>
                <fullName>MessagingSession</fullName>
                <label>Messaging</label>
            </value>
            <value>
                <fullName>VoiceCall</fullName>
                <label>Voice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>