force-app/main/default/objects/Transfer__c/fields/Different_Callback_Number_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Different_Callback_Number_Prompt__c</fullName>
    <description>Prompt to play when the user wants to receive the callback at a separate number.</description>
    <inlineHelpText>Prompt to play when the user wants to receive the callback at a separate number.</inlineHelpText>
    <label>Different Callback Number Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>