force-app/main/default/objects/Transfer__c/fields/Invalid_Number_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Number_Prompt__c</fullName>
    <description>Prompt to play when user entered an invalid number.</description>
    <inlineHelpText>Prompt to play when user entered an invalid number.</inlineHelpText>
    <label>Invalid Number Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>