force-app/main/default/objects/Transfer__c/fields/Offer_Callback__c.field-meta.xml
<CustomField>
    <fullName>Offer_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if callback is available for this transfer</description>
    <inlineHelpText>Select if callback is available for this transfer</inlineHelpText>
    <label>Offer Callback?</label>
    <type>Checkbox</type>
</CustomField>