force-app/main/default/objects/Transfer__c/fields/Transfer_Destination__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Destination__c</fullName>
    <description>This field stores the ID of the Salesforce Queue (in case of Queue Transfer) OR the phone number (in case of External Transfer).</description>
    <inlineHelpText>18-digit Salesforce Voice Call Queue ID or the phone number to transfer to</inlineHelpText>
    <label>Transfer Destination</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>