force-app/main/default/objects/Transfer__c/fields/Transfer_Label__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Label__c</fullName>
    <description>This field stores the Name of the Salesforce Queue (in case of Queue Transfer) OR the text identifier (in case of External Transfer); ex: Voice Call Queue OR Agent X DID number.</description>
    <inlineHelpText>User-friendly text to identify the transfer destination</inlineHelpText>
    <label>Transfer Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>