force-app/main/default/objects/Transfer__c/fields/Transfer_Message__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Message__c</fullName>
    <defaultValue>&apos;Please wait while we are transferring you...&apos;</defaultValue>
    <description>If you want to play a message before performing the call transfer to a queue OR the external phone number.</description>
    <inlineHelpText>Text message played by Amazon Connect flow before transferring to Transfer Destination</inlineHelpText>
    <label>Transfer Message</label>
    <type>TextArea</type>
</CustomField>