force-app/main/default/objects/Transfer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>You can transfer the call to a phone number OR to a queue.</description>
    <inlineHelpText>Type of transfer to perform</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue Transfer</fullName>
            </value>
            <value>
                <fullName>External Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>